Salesforce/main/default/main/default/objects/SiteUser__c/fields/ativar_conta_corrente__c.field-meta.xml
<CustomField>
    <fullName>ativar_conta_corrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado Conta Corriente</label>
    <type>Checkbox</type>
</CustomField>