Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_Anexos__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_Anexos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado Anexos</label>
    <type>Checkbox</type>
</CustomField>