Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_BRMX__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_BRMX__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Habilitado BRMX</label>
    <type>Checkbox</type>
</CustomField>