Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_DSEM__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_DSEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado DSEM</label>
    <type>Checkbox</type>
</CustomField>