Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_Eventos__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_Eventos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado Eventos</label>
    <type>Checkbox</type>
</CustomField>