Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_LICENCAS__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_LICENCAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado LICENÇAS</label>
    <type>Checkbox</type>
</CustomField>