Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_LICS__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_LICS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado LICS</label>
    <type>Checkbox</type>
</CustomField>