Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitado_NEOG__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_NEOG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado NEOG</label>
    <type>Checkbox</type>
</CustomField>