Salesforce/main/default/main/default/objects/SiteUser__c/fields/Habilitar_Venda_de_Basica__c.field-meta.xml
<CustomField>
    <fullName>Habilitar_Venda_de_Basica__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Habilitar Venda de Basica</label>
    <type>Checkbox</type>
</CustomField>