Salesforce/main/default/main/default/objects/SiteUser__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Ocupação</label>
    <length>40</length>
    <type>Text</type>
</CustomField>