Salesforce/main/default/main/default/objects/SiteUser__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Url</type>
</CustomField>