Salesforce/main/default/main/default/objects/SiteUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Email__c</columns>
    <columns>Habilitado_Anexos__c</columns>
    <columns>Habilitado_Eventos__c</columns>
    <columns>Habilitado_Votacion_DSEM__c</columns>
    <columns>Habilitado_BRMX__c</columns>
    <columns>Habilitado_DSEM__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>