Salesforce/main/default/main/default/objects/SiteUser__c/listViews/Vota_o_Don_Mario.listView-meta.xml
<ListView>
    <fullName>Vota_o_Don_Mario</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Email__c</columns>
    <columns>Habilitado_DSEM__c</columns>
    <columns>Habilitado_Votacion_DSEM__c</columns>
    <columns>Habilitado_Anexos__c</columns>
    <columns>Habilitado_Eventos__c</columns>
    <columns>Habilitar_Royalty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Habilitado_Votacion_DSEM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Votação Don Mario</label>
    <language>es</language>
</ListView>